- Upgrade to Java 25. - Code polishing. - Set next version.